@@ -31,7 +31,7 @@ void RayFree(CRay *I);
 void RayPrepare(CRay *I,float v0,float v1,float v2,
                 float v3,float v4,float v5,float *mat,float *rotMat,
                 float aspRat,int width, 
-                float pixel_scale,int ortho,float pixel_ratio);
+                float pixel_scale,int ortho,float pixel_ratio,float back_ratio);
 void RayRender(CRay *I,int width,int height,unsigned int *image,
                float front,float back,double timing,float angle,
                float fov,float *pos);
@@ -106,6 +106,8 @@ struct _CRay {
   float min_box[3];
   float max_box[3];
   int Sampling;
+  float PixelRatio;
+  float FrontBackRatio;
 };
 
 
