@@ -141,6 +141,7 @@ void ScenePrimeAnimation(PyMOLGlobals *G);
 void SceneLoadAnimation(PyMOLGlobals *G, double duration,int hand);
 int SceneMustDrawBoth(PyMOLGlobals *G);
 float SceneGetReflectValue(PyMOLGlobals *G);
+float SceneGetSpecularValue(PyMOLGlobals *G,float spec);
 
 #endif
 
