@@ -2665,6 +2665,10 @@ void SettingInitGlobal(PyMOLGlobals *G,int alloc,int reset_gui)
   SettingSet_i(I,cSetting_distance_exclusion, 5);
   SettingSet_i(I,cSetting_h_bond_exclusion, 3);
   SettingSet_i(I,cSetting_label_shadow_mode, 3);
+  SettingSet_3f(I,cSetting_light4, -1.2F, 0.3F, -0.2F);
+  SettingSet_3f(I,cSetting_light5,  0.3F, 0.6F, -0.75F);
+  SettingSet_3f(I,cSetting_light6, -0.3F, 0.5F,  0.0F);
+  SettingSet_3f(I,cSetting_light7,  0.9F,-0.1F, -0.15F);
 }
 
 
